--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,65 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
+* {
+  font-family: Helvetica, Sans-Serif;
+  color: #4C4C4C;
+}
+
+h1{
+  margin: 0 auto;
+  text-align: center;
+}
+
+#new_game_button{
+  display: none;
+}
+
+a:link {
+text-decoration: none;
+}
+
+a:visited {
+text-decoration: none;
+}
+
+a:hover {
+  background-color: #4C4C4C;
+  border: 1px solid #4C4C4C;
+  color: white;
+}
+
+nav {
+  display:inline;
+  text-align: left;
+  margin-left: 10px auto;
+
+}
+
+ul {
+  list-style-type: none;
+}
+
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+
+.content {
+  padding:10px;
+  padding-bottom:10px;
+  margin: 0 auto;
+}
+
+#header {
+  padding:10px;
+
+}
+
+#footer {
+  padding:10px;
+  width:100%;
+  height:10px;
+  position:fixed;
+  bottom:0;
+  left:0;
+  font-size: 20%;
+}
+
